--- a/navbar.html
+++ b/navbar.html
@@ -36,18 +36,20 @@
           </svg>
           <input type="search" class="form-control ps-5" placeholder="search" />
         </div>
-        <div class="groupMultiLang" id="groupMultiLang">
+        <div class="">
           <div class="multi-lang">
-            <svg width="20" height="20" fill="currentColor">
-              <use href="./icons.svg#iconGlobal"></use>
-            </svg>
-            <span>Tiếng Việt</span>
+            <div class=""  id="groupMultiLang">
+              <svg width="20" height="20" fill="currentColor">
+                <use href="./icons.svg#iconGlobal"></use>
+              </svg>
+              <span>Tiếng Việt</span>
+            </div>
             <div class="box-multi d-none card" id="multiBox">
               <div class="card-body p-0 ">
                 <ul class="list-unstyled m-0 list_hover">
-                  <li class="mb-2 p-2">Tiếng Việt</li>
-                  <li class="mb-2 p-2">Tiếng Anh</li>
-                  <li class=" p-2">Tiếng Trung</li>
+                  <li class="mb-2 p-2" onclick="location.href='./navbar.html'">Tiếng Việt</li>
+                  <li class="mb-2 p-2"  onclick="location.href='./navbar.html'">Tiếng Anh</li>
+                  <li class="p-2"  onclick="location.href='./navbar.html'">Tiếng Trung</li>
                 </ul>
               </div>
             </div>
@@ -81,7 +83,7 @@
           <div class="card-body p-0">
             <ul class="list-unstyled m-0 list_hover">
               <li class="p-2"
-                onclick="location.href='#'"
+              onclick="location.href='./navbar.html'"
                 class="d-flex justify-content-start align-items-center gap-2"
               >
                 <svg width="20" height="20" fill="currentColor">
