--- a/src/web/common/sidebar.html
+++ b/src/web/common/sidebar.html
@@ -111,7 +111,7 @@
           <div class="d-flex align-items-center gap-2">
             <span>Đăng xuất</span>
           </div>
-          <button class="btn btn-sm">Thoát</button>
+          <button class="btn btn-sm btn-outline-primary">Thoát</button>
         </div>
       </div>
     </div>
